# universal-data-permissions-scanner

./: .bumpversion.cfg  .gitignore  .pylintrc  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  makefile  mkdocs.yml  mypy.ini  pyproject.toml  pyrightconfig.json  setup.cfg  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
authz_analyzer/: __init__.py  authz_analyzer.py  cli.py  main.py  model.py  writers.py
authz_analyzer/authz_collectors/: README.MD
authz_analyzer/authz_collectors/snowflake_collector/: __init__.py  snowflake_collector.py
authz_analyzer/authz_collectors/snowflake_collector/commands/: roles_grants.sql  roles_tables_resources.sql
authz_analyzer/authz_data_model/: authz_data_model.py
authz_analyzer/authz_exporters/: csv_exporter.py
authz_analyzer/az_bigquery/: analyzer.py  policy_tree.py  service.py
authz_analyzer/datastores/aws/: __init__.py  account_resources.py  aws_authz_analyzer.py
authz_analyzer/datastores/aws/actions/: account_actions.py  actions_resolver.py  actions_resolver_handler.py  service_actions_resolver_base.py
authz_analyzer/datastores/aws/analyzer/: __init__.py  analyzer.py  exporter.py
authz_analyzer/datastores/aws/iam/: iam_entities.py  iam_groups.py  iam_policies.py  iam_roles.py  iam_users.py  public_block_access_config.py
authz_analyzer/datastores/aws/permissions_resolver/: identity_to_resource_line.py  identity_to_resource_nodes_base.py  permissions_resolver.py
authz_analyzer/datastores/aws/policy_evaluation/: __init__.py  policy_evaluation.py
authz_analyzer/datastores/aws/principals/: no_entity_principal.py  principal_type.py
authz_analyzer/datastores/aws/resources/: account_resources.py  resources_resolver.py  resources_resolver_handler.py  service_resources_resolver_base.py
authz_analyzer/datastores/aws/services/: __init__.py  service_action_base.py  service_base.py  service_entity_base.py  service_resource_base.py
authz_analyzer/datastores/aws/utils/: create_session.py  pagination.py
authz_analyzer/datastores/base/: __init__.py  analyzer.py  connect_params.py  connector.py
authz_analyzer/datastores/bigquery/: __init__.py  analyzer.py  policy_tree.py  service.py
authz_analyzer/datastores/databricks/: analyzer.py  exceptions.py  identities.py  model.py  policy_tree.py
authz_analyzer/datastores/databricks/service/: model.py  scim.py
authz_analyzer/datastores/mongodb/: analyzer.py  model.py  resolvers.py  service.py  service_model.py
authz_analyzer/datastores/mongodb/atlas/: analyzer.py  model.py  permission_resolvers.py  service.py  (+1 more)
authz_analyzer/datastores/postgres/: analyzer.py  database_query_results.py  deployment.py  exporter.py  model.py
authz_analyzer/datastores/redshift/: analyzer.py  exporter.py  model.py  service.py
authz_analyzer/datastores/s3/: analyzer.py
authz_analyzer/datastores/snowflake/: __init__.py  analyzer.py  connector.py  exporter.py  model.py  params.py  service.py
authz_analyzer/exporters/: graph_exporter.py
authz_analyzer/models/: README.MD  __init__.py  graph_model.py  model.py
authz_analyzer/utils/: README.MD  logger.py
authz_analyzer/utils/aws/: account_resources.py  aws_authz_analyzer.py  create_session.py  pagination.py  service_entity_base.py
authz_analyzer/utils/connectors/: README.MD  base_connector.py
authz_analyzer/writers/: README.MD  __init__.py  base_writers.py  csv_writer.py  get_writers.py  multi_json_exporter.py  writers.py
changelog/: index.html
contributing/: index.html
datastores/bigquery/: index.html
datastores/databricks/: index.html
datastores/mongodb/: index.html
datastores/postgresql/: index.html
datastores/redshift/: index.html
datastores/s3/: index.html
datastores/snowflake/: index.html
docs/: api.md  bigquery.md  contributing.md  index.md  installation.md  usage.md
docs/datastores/: bigquery.md  databricks.md  mongodb.md  postgresql.md  redshift.md  s3.md  snowflake.md
installation/: index.html
search/: search_index.json
tests/: __init__.py  authz-analyzer-export  test_authz_analyzer.py  test_cli.py  test_omer_no_commit.py
tests/collectors/: test_snowflake_collector.py
tests/helpers/connectors/: mock_snowflake_connector.py
tests/mocks/: mock_writers.py
tests/test_writers/: test_csv_writer.py  test_multijson_writer.py
tests/tests_datastores/aws/: test_aws_authz_analyzer.py  test_exporter.py  test_iam_entities.py  test_ptrp.py
tests/tests_datastores/bigquery/: generate_authz_entry.py  mocks.py  test_bigquery.py
tests/tests_datastores/databricks/: generate_authz_entry.py  mocks.py  test_analyzer.py
tests/tests_datastores/mongodb/: test_atlas_build_custom_role_from_response.py  test_atlas_organization_users.py  test_mongodb.py
tests/tests_datastores/postgres/: test_postgress_analyzer.py
tests/tests_datastores/redshift/: test_redshift.py
tests/tests_datastores/snowflake/: test_snowflake_analyzer.py
tests/tests_utils/tests_aws/: test_aws_authz_analyzer.py  test_iam_entities.py
universal_data_permissions_scanner/: __init__.py  cli.py  main.py
universal_data_permissions_scanner/datastores/aws/: __init__.py
universal_data_permissions_scanner/datastores/bigquery/: analyzer.py  policy_tree.py  service.py
universal_data_permissions_scanner/datastores/databricks/: analyzer.py  identities.py  policy_tree.py
universal_data_permissions_scanner/datastores/mongodb/: analyzer.py  model.py  resolvers.py  service.py  service_model.py
universal_data_permissions_scanner/datastores/postgres/: analyzer.py  database_query_results.py  exporter.py  model.py
universal_data_permissions_scanner/datastores/snowflake/: analyzer.py  exporter.py  model.py  service.py
universal_data_permissions_scanner/errors/: failed_connection_errors.py  snowflake.py
universal_data_permissions_scanner/models/: __init__.py  model.py
universal_data_permissions_scanner/utils/: logger.py
universal_data_permissions_scanner/writers/: __init__.py  base_writers.py  csv_writer.py  get_writers.py  multi_json_exporter.py
usage/: index.html
(+278 files in other folders)
