[tool]
[tool.poetry]
name = "udps"
version = "0.1.24"
homepage = "https://github.com/satoricyber/universal-data-permissions-scanner"
description = "Analyze authorization."
authors = ["SatoriCyber"]
readme = "README.md"
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "universal_data_permissions_scanner" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
click = "8.1.3"
snowflake-connector-python = ">=3.1.0"
google-cloud-bigquery = ">=3.4.2"
google-cloud-resource-manager = ">=1.6.3,<2.0"
google-api-python-client = "~2.66.0"
boto3 = "^1.26.27"
pydantic = "^1.10.2"
networkx = "^2.8.8"
pyserde = "^0.9.6"
psycopg2 = "^2.9.5"
psycopg2-binary = "^2.9.5"
google-cloud-iam = "^2.10.0"
redshift-connector = "^2.0.909"
requests = "^2.28.1"
pymongo = "^4.3.3"
pytest  = {version="^7.2.0", optional = true}
pytest-cov  = {version="^4.0.0", optional = true}
black = {version="^22.12.0", optional=true}
isort = {version="^5.11.3", optional=true}
twine = {version="^4.0.2", optional=true}
types-psycopg2 = {version="^2.9.21.2", optional=true}
google-api-python-client-stubs = {version="^1.13.0", optional=true}
mypy = {version="^0.991", optional=true}
virtualenv  = {version="^20.17.1", optional=true}
pip  =  {version=">=22.3.1,<24.0.0", optional=true}
types-requests = {version="^2.28.11.7", optional=true}
tox  = {version="^4.0.14", optional=true}
pre-commit = {version="^2.20.0", optional=true}
bump2version = {version="^1.0.1", optional=true}
mkdocs = {version="^1.4.2", optional=true}
pylint = {version="^2.16.2", optional=true}
pyright = {version="^1.1.293", optional=true}
mkdocs-material = {version="^9.0.12", optional=true}
mkdocs-include-markdown-plugin = {version = "^4.0.3", optional=true}
markdown-it-py = {version = "^2.2.0", optional=true}
databricks-cli = "^0.17.4"

[tool.poetry.extras]
test = ["pytest", "pytest-cov", "black", "isort", "twine", "mypy", "types-psycopg2", 
        "google-api-python-client-stubs", "types-requests", "pylint", "pyright", "bump2version"]
release = ["twine", "mkdocs", "mkdocs-material", "mkdocs-include-markdown-plugin"]

[tool.poetry.scripts]
udps = 'universal_data_permissions_scanner.cli:main'


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
